<resources>
    <string name="app_name">美人鱼</string>
    <string name="title_activity_login">登陆</string>
    <string name="title_activity_register">注册</string>
    <string name="title_fragment_home">首页</string>
    <string name="title_fragment_friend">好友</string>
    <string name="title_fragment_me">我</string>
    <string name="title_fragment_orders">充值记录</string>
    <string name="title_fragment_out_money">申请提现</string>
    <string name="title_fragment_out_money_history">提现历史</string>

    <string name="prompt_username">用户名</string>
    <string name="prompt_phone">手机</string>
    <string name="prompt_password">密码</string>
    <string name="prompt_confirm_password">确认密码</string>
    <string name="prompt_wechat">微信</string>
    <string name="prompt_qq">QQ</string>
    <string name="prompt_invite_code">验证码</string>
    <string name="action_sign_in">登陆</string>
    <string name="action_register">注册</string>
    <string name="action_out_money_history">历史</string>

    <string name="menu_home">首页</string>
    <string name="menu_friend">好友</string>
    <string name="menu_me">我的</string>

    <string name="password_username_err">用户名不正确</string>
    <string name="password_length_err">密码长度不能低于6位数</string>
    <string name="password_match_err">两次密码输入不一致</string>
    <string name="password_phone_err">手机号码不正确</string>
    <string name="password_wechat_err">微信号码不正确</string>
    <string name="password_qq_err">QQ号码不正确</string>
    <string name="password_invitecode_err">验证码不正确</string>
    <string name="login_fail">登录失败</string>
    <string name="register_fail">注册失败</string>
    <string name="price">¥:</string>
    <string name="sales">销量:</string>
    <string name="in_money_user">用户:</string>
    <string name="in_money_amount">金额:</string>
    <string name="in_money_time">时间:</string>
    <string name="out_money_amount">金额:</string>
    <string name="out_money_apply_time">申请时间:</string>
    <string name="out_money_success_time">处理时间:</string>
    <string name="out_money_status">状态:</string>
    <string name="btn_get_red_package">领红包</string>
    <string name="btn_get_red_package2">充值记录</string>
    <string name="btn_my_change">我的钱包</string>
    <string name="btn_my_msg">我的消息</string>
    <string name="btn_logout">登出</string>
    <string name="btn_back">返回</string>

    <string name="tv_mymoney">我的钱包</string>
    <string name="tv_money_type">¥</string>
    <string name="tv_money_amount">_ _</string>
    <string name="btn_in_money">充值</string>
    <string name="btn_out_money">提现</string>
    <string name="invalite_login">登录失效，请重新登录</string>
    <string name="had_get_red_packet">红包已领取</string>

    <string name="out_amount">请输入提现金额</string>
    <string name="max_out_amount">最大提现金额324.50元</string>
    <string name="confirm">确定</string>
</resources>
