<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <FrameLayout
        android:id="@+id/layout_main_content"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

    </FrameLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@+id/layout_menu"
        android:background="@color/main_style_normal_color" />

    <LinearLayout
        android:id="@+id/layout_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_menu_home"
            style="@style/menu_text_style"
            android:drawableTop="@drawable/menu_home_bg"
            android:text="@string/menu_home" />

        <TextView
            android:id="@+id/tv_menu_friend"
            style="@style/menu_text_style"
            android:drawableTop="@drawable/menu_friend_bg"
            android:text="@string/menu_friend" />

        <TextView
            android:id="@+id/tv_menu_me"
            style="@style/menu_text_style"
            android:drawableTop="@drawable/menu_me_bg"
            android:text="@string/menu_me" />

    </LinearLayout>
</RelativeLayout>
